--- a/style.css
+++ b/style.css
@@ -21,3 +21,16 @@ img {
     width: 400px;
     height: 400px;
 }
+
+.item{
+    height: 200px;
+    width: 200px;
+}
+
+#skills1{
+    width: 400px;
+}
+.container{
+    display: flex;
+    justify-content: center;
+}
