--- a/style.css
+++ b/style.css
@@ -1,11 +1,44 @@
+body{
+    font-family: 'Trebuchet MS', sans-serif;
+}
+
+
 header, nav, aside, footer{
     border: 1px solid #ccc;
     text-align: center;
     float: left;
     width: 100%;
     margin: 5px 0px;
+    background-color: rgb(222, 222, 222);
+    
 }
 
+header{
+    font-size: 35px;
+}
+
+nav{
+
+}
+
+nav a{
+    font-size: 35px;
+    float: left;
+    padding: 10px;
+}
+
+aside{
+
+}
+
+aside h2{
+    font-size: 50px;
+}
+
+#about{
+    padding-left: 10px;
+    padding-right: 10px;
+}
 aside:nth-child(1){
     width: 60%;
     height: 400px;
@@ -20,7 +53,13 @@ aside:nth-child(2){
 img {
     width: 400px;
     height: 400px;
+    
 }
+
+footer{
+
+}
+
 
 .item{
     height: 200px;
@@ -28,9 +67,23 @@ img {
 }
 
 #skills1{
-    width: 400px;
+    width: 450px;
 }
 .container{
     display: flex;
     justify-content: center;
+}
+
+    
+
+.contact{
+    height: 100px;
+    width: 100px;
+}
+
+
+.flexbox{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
 }
